--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-/* style.css */
 
-/* Reset default margin and padding */
+
+
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +12,7 @@ body, html {
     font-family: Arial, sans-serif;
 }
 
-/* Navbar Styles */
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -39,7 +39,7 @@ body, html {
     cursor: pointer;
 }
 
-/* Banner Styles */
+
 .banner {
     height: 80vh;
     display: flex;
@@ -67,6 +67,79 @@ body, html {
     border-radius: 5px;
     cursor: pointer;
 }
-body{
-    background-color: aqua;
+/* Action Section Container */
+.action-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px 0;
+    background-color: #f4f4f4;
+    height: 100vh; /* Full screen height */
+}
+
+
+.action-container {
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    max-width: 1140px;
+    height: 70%; 
+    background: rgb(237, 232, 232);
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(8, 0, 0, 0.856);
+    padding-left: 20px;
+}
+
+
+.action-left {
+    flex: 1;
+    padding-right: 20px;
+}
+
+.action-left h2 {
+    font-size: 36px;
+    font-style: oblique;
+    margin-bottom: 20px;
+
+}
+
+.action-left p {
+    font-size: 18px;
+    margin-bottom: 30px;
+    color: #555;
+}
+
+.live-btn {
+    padding: 12px 25px;
+    font-size: 20px;
+    background-color: #3b4e62;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor:grab ;
+    
+}
+.live-btn:hover {
+    background-color: #e4a1e9; 
+    
+}
+
+
+
+.action-right {
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+.action-right img {
+    
+    max-width: 450px;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
 }
