--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,62 @@
 
+.users-section {
+    background-color: #f0f0f0e3;
+    padding: 80px 0;
+    display: flex;
+    justify-content: center;
+}
+
+.users-container {
+    background: white;
+    width: 90%;
+    max-width: 1200px;
+    padding: 60px 40px;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+    text-align: center;
+}
+
+
+.users-title {
+    font-size: 36px;
+    margin-bottom: 40px;
+    color:#4b407c;
+}
+
+
+.users-data {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.user-box {
+    background: #aed7ee;
+    
+    padding: 90px 80px;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    transition: transform 0.3s ease;
+}
+
+.user-box h3 {
+    font-size: 28px;
+    color: #4b407c;
+    margin-bottom: 10px;
+    background-color: #f4f5f6;
+}
+
+.user-box p {
+    font-size: 16px;
+    color:#4b407c;
+}
+
+.user-box:hover {
+    transform: translateY(-5px);
+}
+
+
 
 
 * {
@@ -9,7 +67,7 @@
 
 body, html {
     height: 100%;
-    font-family: Arial, sans-serif;
+    font-family:monospace;
 }
 
 
@@ -67,20 +125,18 @@ body, html {
     border-radius: 5px;
     cursor: pointer;
 }
-/* Action Section Container */
+
 .action-section {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 60px 0;
     background-color: #f4f4f4;
-    height: 100vh; /* Full screen height */
-}
+    height: 100vh; 
 
 
 .action-container {
     display: flex;
-    
     justify-content: center;
     align-items: center;
     width: 80%;
